start of spotify integration

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "OpenAI": {
-    "APIKey": "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"
+    "APIKey": "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"
   },
+  "Spotify": {
+    "APIKey": "328d8a5f317c45faa74d87aa66493bc1"
+  }
   "AllowedHosts": "*"
 }
