--- a/Harmonix.csproj
+++ b/Harmonix.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SpotifyAPI.Web" Version="7.1.1" />
   </ItemGroup>
 
 </Project>
